--- a/templates/04-web.yaml
+++ b/templates/04-web.yaml
@@ -627,7 +627,7 @@ Resources:
             /tmp/install_moodle.sh:
               content:  !Sub |
                 #!/bin/bash -xe
-                wget -O /tmp/moodle.tgz https://download.moodle.org/stable34/moodle-3.4.tgz  
+                wget -O /tmp/moodle.tgz wget http://sourceforge.net/projects/moodle/files/Moodle/stable38/moodle-latest-38.tgz 
                 tar -xvzf /tmp/moodle.tgz --strip-components=1 -C /var/www/moodle/html/
                 mv /tmp/config.php /var/www/moodle/html/config.php
                 chown -R root:apache /var/www/moodle/html
